--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "quintiq-booth-scheduler",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "main.js",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "electron": "electron .",
+    "electron-dist": "build /dist",
+    "build": "ng build --base-href ./ && cp main.js dist",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
@@ -21,6 +25,9 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "javascript-lp-solver": "^0.4.5",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -31,6 +38,9 @@
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
+    "electron": "^1.7.9",
+    "electron-builder": "^19.37.2",
+    "electron-reload": "^1.2.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
